--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+
+
 ### STS ###
 .apt_generated
 .classpath
@@ -38,3 +40,4 @@ out/
 
 ### Email ###
 application.properties
+/src/main/java/com/example/moida/common/
