git ignore test

--- a/.gitignore
+++ b/.gitignore
@@ -39,5 +39,8 @@ out/
 .vscode/
 
 ### Email ###
-application.properties
+
+/resources/*.properties
 Common.java
+/src/main/java/com/example/moida/common/Common.java
+/src/main/java/com/example/moida/common/
