--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,4 @@ out/
 Common.java
 /src/main/java/com/example/moida/common/Common.java
 /src/main/java/com/example/moida/common/
+application.properties
